# IdentidadByEMC/DatosEMC/DTOs/MateriasDTO.cs
@@ -1,0 +1,17 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace DatosEMC.DTOs
+{
+    public class MateriasDTO
+    {
+        public int Id { get; set; }
+
+        public string NombreMateria { get; set; }
+
+        public int IdEmpresa { get; set; }
+    }
+}
